<resources>
    <string name="app_name">Snooker Assistant</string>
    <string name="action_settings">Settings</string>

    <string name="dummy">Dummy</string>

    <!-- Start Activity -->
    <!-- button's strings -->
    <string name="quick_match">Quick Match</string>
    <string name="championship">Championship</string>
    <string name="players">Players</string>

    <string name="start_activity_drawer_open">Open navigation drawer</string>
    <string name="start_activity_drawer_close">Close navigation drawer</string>

    <string name="next">Next</string>
    <string name="add_player">Add player</string>

    <string name="choose_frame_hint">1</string>
    <string name="choose_frame_text">Enter number of frames you want to play</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
