<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/start_activity_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".StartActivity$PlaceholderFragment">

        <Button
            android:layout_width="@dimen/start_activity_button_width"
            android:layout_height="@dimen/start_activity_button_height"
            android:text="@string/quick_match"
            android:id="@+id/button_quick_match"
            android:layout_above="@+id/button_championship"
            android:layout_alignLeft="@+id/button_championship"
            android:layout_alignStart="@+id/button_championship" />

        <Button
            android:layout_width="@dimen/start_activity_button_width"
            android:layout_height="@dimen/start_activity_button_height"
            android:text="@string/championship"
            android:id="@+id/button_championship"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="@dimen/start_activity_button_width"
            android:layout_height="@dimen/start_activity_button_height"
            android:text="@string/players"
            android:id="@+id/button_players"
            android:layout_below="@+id/button_championship"
            android:layout_alignLeft="@+id/button_championship"
            android:layout_alignStart="@+id/button_championship" />
    </RelativeLayout>

    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="@dimen/left_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>

</android.support.v4.widget.DrawerLayout>